[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.07, 0.1)

[node name="Title" type="Label" parent="."]
text = "Frontline Dominion"
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.1
anchor_bottom = 0.1
offset_left = -140.0
offset_right = 140.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Nowa gra"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Wczytaj"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Ustawienia"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Wyjście"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_right = 180.0
offset_top = -120.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SettingsTitle" type="Label" parent="SettingsPanel/VBoxContainer"]
text = "Ustawienia"

[node name="AutosaveCheck" type="CheckBox" parent="SettingsPanel/VBoxContainer"]
text = "Autozapis"
button_pressed = true

[node name="CloseHint" type="Label" parent="SettingsPanel/VBoxContainer"]
text = "Kliknij Ustawienia aby zamknąć"
